update javadocs and code cleanup